<resources>
    <string name="app_name">Health Pal</string>
    <string name="title_activity_edit_medicine">EditMedicine</string>
    <string name="name">Nome</string>
    <string name="medicine_name_desc">Digite o nome do medicamento</string>
    <string name="contact_name">Nome</string>
    <string name="contact_description">Descriçao</string>
    <string name="contact_phone">Telefone</string>
    <string name="dosage">Dosagem</string>
    <string name="medicine_dosage_desc">Descreva a dosagem do remédio</string>
    <string name="description">Descrição</string>
    <string name="medicine_description_desc">Escreva a descrição de uso da medicação</string>
    <string name="save">Salvar Alterações</string>
    <string name="title_create_medicine">Adicionar Medicamento</string>
    <string name="title_create_contact">Adicionar Contato</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_medicine">Medicamentos</string>
    <string name="title_contact">Contatos</string>
    <string name="title_emergency">Emergência</string>
    <string name="card_default_title">Card Title</string>
    <string name="card_default_text">Card Text</string>
    <string name="card_default_footer">Card Footer</string>
    <string name="medicine_card_presp">Prescriçao</string>
    <string name="medicine_card_obs">Observaçao</string>
    <string name="title_activity_bottom_navbar">BottomNavbar</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_alarm_raise">Hora do remédio!</string>
    <string name="title_alarm_post">Como você está se sentindo?</string>
    <string name="button_medicine_taken">EU TOMEI O REMÉDIO</string>
    <string name="navbar_home">Dashboard</string>
    <string name="navbar_medicine">Medicamentos</string>
    <string name="navbar_contacts">Contatos</string>
    <string name="navbar_emergency">Emergência</string>
    <string name="add">ADICIONAR</string>
    <string name="create_alarm">Criar Alarme</string>
    <string name="select_medicine">Selecionar Remédio</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">cancelar</string>
    <string name="initial_time">selecionr horário inicial</string>
    <string name="interval">Intervalo (horas)</string>
</resources>
