<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMedicineActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/medicineName"
        android:id="@+id/medicineNameLabel"
        android:text="@string/name"
        android:contentDescription="@string/medicine_name_desc"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medicineName"
        android:inputType="textAutoComplete"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/medicineDosage"
        android:text="@string/dosage"
        android:id="@+id/medicineDosageLabel"
        android:contentDescription="@string/medicine_dosage_desc"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medicineDosage"
        android:inputType="text"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/medicineDescription"
        android:text="@string/description"
        android:id="@+id/medicineDescriptionLabel"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/medicineDescription"
        android:inputType="text"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/medicineSaveButton"
        android:text="@string/save"
        android:onClick="handleSave"
        />

</LinearLayout>